--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
   "name": "solomough-portfolio",
-  "private": true,
   "version": "1.0.0",
-  "type": "module",
+  "private": true,
+  "description": "Solomough | Personal Portfolio Website showcasing Faith + Tech + Skills",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^10.16.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "lucide-react": "^0.276.0",
+    "framer-motion": "^10.12.16"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0"
-  }
+    "vite": "^5.4.20",
+    "@vitejs/plugin-react": "^4.0.0",
+    "tailwindcss": "^3.3.4",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.26"
+  },
+  "keywords": [
+    "portfolio",
+    "react",
+    "vite",
+    "tailwindcss",
+    "framer-motion",
+    "lucide-react",
+    "faith",
+    "tech"
+  ],
+  "author": "Solomough",
+  "license": "MIT"
 }
