--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "description": "Solomough | Personal Portfolio Website showcasing Faith + Tech + Skills",
+  "homepage": "https://Solomough.github.io/solomough-portfolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,7 +22,8 @@
     "@vitejs/plugin-react": "^4.0.0",
     "tailwindcss": "^3.3.4",
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.26"
+    "postcss": "^8.4.26",
+    "gh-pages": "^5.0.0"
   },
   "keywords": [
     "portfolio",
