--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.276.0",
-    "framer-motion": "^10.12.16"
+    "framer-motion": "^10.12.16",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "vite": "^5.4.20",
